--- a/codeship-services.yml
+++ b/codeship-services.yml
@@ -3,4 +3,4 @@ services:
   dashen:
     build: .
     cached: true
-    env_file_encrypted: codecov.env.encrypted
+    encrypted_env_file: codecov.env.encrypted
